--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 body {
-	background-color: lightgreen;
-	font-family: 'Inter', sans-serif;
+    background-color: lightgreen;
+    font-family: "Inter", sans-serif;
 }
